@@ -1,5 +1,11 @@
 2008-03-02  Benjamin Otte  <otte@gnome.org>
 
+	* daemon/gvfsbackendftp.c: (do_delete),
+	(g_vfs_backend_ftp_class_init):
+	implement delete
+
+2008-03-02  Benjamin Otte  <otte@gnome.org>
+
 	* daemon/gvfsbackendftp.c:
 	redo error handling: We now store the error and the job in the
 	FtpConnection. This way we don't have to handle errors in the outer
